ubiquity (2.3.6) UNRELEASED; urgency=low

  * Redirect console blanking setterm command to /dev/console so it is effective
    with upstart.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Fri, 13 Aug 2010 18:10:03 -0500

ubiquity (2.3.5) maverick; urgency=low

  [ Mario Limonciello ]
  * Drop the (now) unused install_window and references to it.
  * Don't start the ubiquity panel on xfwm4.  It doesn't appear to work properly
    for now even with the proper indicators installed.
  * Set the priority the prepare page higher to prevent timezone from being
    shown instead.
  * Fix misc.get_release to return the proper data for non-ubuntu disks.
  * Correct the text in the stepLanguage widgets to reflect ${RELEASE}
    rather than hardcoding to Ubuntu.
  * depends on python-vte for GTK frontend (LP: #616272)
  * depends on python-webkit for GTK frontend (LP: #616275)

  [ Jonathan Riddell ]
  * In ubi-wireless.py and ubi-prepare.py only load gtkwidgets.py when
    creating the GTKPage, else KDE frontend breaks

 -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 11 Aug 2010 18:02:35 +0100

ubiquity (2.3.4) maverick; urgency=low

  [ Mario Limonciello ]
  * Also set the custom title when translating widgets.
  * If there is at least one framebuffer device, fallback to fbdev rather
    than vesa for bulletproof X.
  * Remove extra imports in ubiquity-dm.
  * Add a new template ubiquity/force_failsafe_graphics intended to force
    installation to use vesa or fbdev, but not on the target system.  This is
    primarily intended for systems where the installation kernel has known
    graphics problems, but you are solving them in a post installation step.
  * Fix packaging to install the new pieces introduced for the overhaul.
  * debian/control: fix build-deps from redesign branch.
  * install two new png files for the language page in the gtk frontend.
  * Fix automatic mode in gtk_ui.
  * Add a new controller function to allow disabling the progress_section